--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,3 @@
-<div>
-    <h1>Home</h1>
-    {{#each blogs}}
-    <h2>{{title}}</h2>
-    <p>{{description}}</p>
-    {{/each}}
-</div>
-
+{{#each blogs as |blog|}}
+{{> post}}
+{{/each}}
