--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
             <a href="">Home</a>
             <a href="">Dashboard</a>
             {{#if loggedIn}}
-            <a href="">Logout</a>
+             <button id="logout" class="btn btn-primary">Logout</button>
             {{else}}
             <a href="">Login</a>
             {{/if}}
