--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,10 +1,10 @@
 <div id="post">
-    <header>
-        <p>{{title}}</p>
+    <div>
+        <a href="/blogpost/{{id}}">{{title}}</a>
         {{!-- The following may be total crap --}}
         <p>Posted by {{user.username}} on {{format_date createdAt}}</p>
-    </header>
-    <main>
-        <p>{{text}}</p>
-    </main>
+    </div>
+    <section>
+        <p>{{description}}</p>
+    </section>
 </div>
