--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Tech Blog</title>
 </head>
 <body>
     <header>
-        <h1>Title</h1>
+        <h1>Tech Blog</h1>
         <nav>
-            <a href="">Home</a>
-            <a href="">Dashboard</a>
+            <a href="/">Home</a>
+            <a href="/">Dashboard</a>
             {{#if loggedIn}}
              <button id="logout" class="btn btn-primary">Logout</button>
             {{else}}
-            <a href="">Login</a>
+            <a href="/login">Login</a>
             {{/if}}
         </nav>
     </header>
     {{{body}}}
 
 {{#if loggedIn}}
-<script src=""></script>
+<script src="/public/js/logout.js"></script>
 {{/if}}
 </body>
 </html>
