--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,6 +3,10 @@
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
+        <label for="username-signup">Username:</label>
+        <input class="form-input" type="text" id="user-login" />
+      </div>
+      <div class="form-group">
         <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
