--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,10 +2,15 @@ body {
     background-color: skyblue !important;
 }
 
+nav {
+    padding-left: 450px;
+}
+
 nav a {
     text-decoration: none;
     margin-right: 5px;
     display: flex;
+    right: 20px;
     
 }
 
