--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,4 +2,4 @@
     <h1>Dashboard</h1>
     <button id="newPostBtn" class="btn btn-primary">New Post</button>
 </div>
-<script></script>
+<script src="/public/js/createpost.js"></script>
