--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
         <h1>Tech Blog</h1>
         <nav>
             <a href="/">Home</a>
-            <a href="/">Dashboard</a>
+            <a href="/dashboard">Dashboard</a>
             {{#if loggedIn}}
              <button id="logout" class="btn btn-primary">Logout</button>
             {{else}}
